Fix mouse hit detection for hosted app titlebar elements

This CL adds the HostedAppButtonContainer to GlassBrowserFrameView's
hit detection to ensure the correct mouse signal is sent to the OS.
This fixes a bug in Windows 10 causing certain mouse movements to
deactivate the page info dialog. See screencasts.

Before: https://bugs.chromium.org/p/chromium/issues/attachment?aid=352755&signed_aid=IbjUxm1YHiMINVDpeUwCXQ==&inline=1
After: https://bugs.chromium.org/p/chromium/issues/attachment?aid=352756&signed_aid=-NF8jWWjNwiA1KrUMeuVkQ==&inline=1

Bug: 864386
Change-Id: Ic706784026431d603b44c1a80302fe0f92ee5868
Reviewed-on: https://chromium-review.googlesource.com/1170664
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584366}
Former-commit-id: 90a0ed3bfba1ce5692b517a2ee50c5d74d5f1f3e