chrome/browser/ui/views/frame/hosted_app_button_container.cc
@@ -28,8 +28,8 @@
 #include "ui/views/controls/label.h"
 #include "ui/views/layout/box_layout.h"
 #include "ui/views/layout/layout_provider.h"
-#include "ui/views/view_properties.h"
 #include "ui/views/widget/native_widget_aura.h"
+#include "ui/views/window/hit_test_utils.h"
 
 namespace {
 
@@ -186,8 +186,7 @@ HostedAppButtonContainer::ContentSettingsContainer::ContentSettingsContainer(
     image_view->SetBorder(views::CreateEmptyBorder(
         gfx::Insets(kContentSettingIconInteriorPadding)));
     image_view->disable_animation();
-    image_view->SetProperty(views::kHitTestComponentKey,
-                            static_cast<int>(HTCLIENT));
+    views::SetHitTestComponent(image_view.get(), static_cast<int>(HTCLIENT));
     content_setting_views_.push_back(image_view.get());
     AddChildView(image_view.release());
   }
@@ -229,16 +228,16 @@ HostedAppButtonContainer::HostedAppButtonContainer(views::Widget* widget,
 
   AddChildView(hosted_app_origin_text_);
 
-  content_settings_container_->SetProperty(views::kHitTestComponentKey,
-                                           static_cast<int>(HTCLIENT));
+  views::SetHitTestComponent(content_settings_container_,
+                             static_cast<int>(HTCLIENT));
   AddChildView(content_settings_container_);
 
-  page_action_icon_container_view_->SetProperty(views::kHitTestComponentKey,
-                                                static_cast<int>(HTCLIENT));
+  views::SetHitTestComponent(page_action_icon_container_view_,
+                             static_cast<int>(HTCLIENT));
   AddChildView(page_action_icon_container_view_);
 
-  browser_actions_container_->SetProperty(views::kHitTestComponentKey,
-                                          static_cast<int>(HTCLIENT));
+  views::SetHitTestComponent(browser_actions_container_,
+                             static_cast<int>(HTCLIENT));
   AddChildView(browser_actions_container_);
   AddChildView(app_menu_button_);
 
